[package]
name = "ldap-parser"
version = "0.1.0"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]
edition = "2018"
license = "MIT/Apache-2.0"
keywords = ["LDAP","parser","nom"]
homepage = "https://github.com/rusticata/ldap-parser"
repository = "https://github.com/rusticata/ldap-parser.git"
categories = ["parser-implementations"]
readme = "README.md"

include = [
  "LICENSE-*",
  "README.md",
  ".gitignore",
  ".travis.yml",
  "Cargo.toml",
  "assets/*.bin",
  "src/*.rs",
  "tests/*.rs"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
der-parser = "5.0.0-beta1"
nom = "6.0"
rusticata-macros = "3.0.1"
thiserror = "1.0"

[dev-dependencies]
hex-literal = "0.3"
