[package]
name = "ldap-parser"
version = "0.4.1"
description = "Parser for the LDAP protocol (RFC 4511)"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]
edition = "2018"
license = "MIT/Apache-2.0"
keywords = ["LDAP","parser","nom"]
homepage = "https://github.com/rusticata/ldap-parser"
repository = "https://github.com/rusticata/ldap-parser.git"
categories = ["parser-implementations"]
readme = "README.md"

include = [
  "LICENSE-*",
  "README.md",
  "CHANGELOG.md",
  ".gitignore",
  ".travis.yml",
  "Cargo.toml",
  "assets/*.bin",
  "src/*.rs",
  "tests/*.rs"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
asn1-rs = "0.7"
rusticata-macros = "4.0"
thiserror = "2.0"

[dev-dependencies]
hex-literal = "0.4"
